--- a/histora-care/src/app/patient/search/search.page.scss
+++ b/histora-care/src/app/patient/search/search.page.scss
@@ -390,7 +390,7 @@ ion-footer {
     }
 
     .stat-label {
-      color: #cbd5e1;
+      color: #e2e8f0;
     }
   }
 
