--- a/histora-care/src/app/shared/components/chat-modal/chat-modal.component.scss
+++ b/histora-care/src/app/shared/components/chat-modal/chat-modal.component.scss
@@ -24,6 +24,7 @@ $border-color: #e2e8f0;
 .chat-header {
   background: $bg-white;
   padding: 12px 16px;
+  padding-top: calc(12px + var(--ion-safe-area-top, 0px));
   border-bottom: 1px solid $border-color;
   display: flex;
   align-items: center;
